--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style> 
+        a {
+            text-decoration: underline;
+            font-weight: normal;
+            }
+      
+        a:hover {
+            text-decoration: none;
+            font-weight: bold;
+            }
+    </style>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
     <title>El Faro</title>
 </head>
+
 <body>
-    <header>EL FARO</header>
+    <header id="titulo">EL FARO</header>
     <br/><br/>
     <img src="media/logo.jpg" width="200" height="100"/>
     <br/><br/>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
+    
     <h5>Seleccione una catogoría del menú</h5>
     <ul class="Menú">
         <li><a href="index.html">Inicio</a></li>
@@ -19,4 +40,13 @@
         <li><a href="general.html">Generales</a></li>
     </ul>
 </body>
+
+<footer>
+    <section>
+        <a href="#titulo">Ir al inicio</a>
+    </section>
+    <p>Copyright 2023</p>
+</footer>
+
+
 </html>
