--- a/deportes.html
+++ b/deportes.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,7 +88,10 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
-
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <h5>Seleccione una catogoría del menú</h5>
         <ul class="Menú">
             <li><a href="index.html">Inicio</a></li>
@@ -99,7 +106,7 @@
     
     <hr>
 
-<div class="grid">
+    <div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia">  
                 <h6>01 de Abril de 2023 | 20:36</h6>
@@ -120,7 +127,7 @@
     </main>
 </div>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia"> 
             <h6>01 de Abril de 2023 | 10:20</h6>
@@ -149,7 +156,7 @@
     </main>
 </div>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia"> 
         <h6>26 de Abril de 2021 | 18:42</h6>
