--- a/general.html
+++ b/general.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -100,7 +104,7 @@
 
 <hr>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia">
             <h6>Sábado 01 abril de 2023 | 16:58</h6>
@@ -128,7 +132,7 @@
     </main>
 </div>
        
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia">
             <h6>Jueves 30 marzo de 2023 | 14:23</h6>
@@ -160,7 +164,7 @@
     </main>
 </div>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia">
             <h6>Martes 28 marzo de 2023 | 19:10</h6>
