--- a/negocios.html
+++ b/negocios.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -98,7 +102,7 @@
               
     <hr>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia"> 
             <h6> 15 de julio 2023 </h6>
@@ -126,7 +130,7 @@
     </main>
 </div>
 
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia"> 
             <h6> 20 de octubre del 2023 </h6> 
@@ -146,7 +150,7 @@
     </main>
 </div>
     
-<div class="grid">
+<div class="grid animate__animated animate__backInLeft">
     <main class="content">
         <article class="noticia">   
             <h6> 20 de noviembre del 2023</h6>
